--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
                 <main >
                   <div class="favorite-item">
                     <h2 class="interest-rate-header">
-                      <strong class="own">Owning your favourite item is <span>straightforward</span> </strong> 
+                      <strong class="own">Owning your favourite item is <span>straightforward</span> </strong></h2>
                       <div class="favorite-item-text">
                         <div class="step1">
-                          <div class="line"></div>
+                          <div class="line"><img src="https://zero.getcarbon.co/images/line.svg" alt=""></div>
                           <div class="number">1</div>
                           <div class="share">Share your Carbon Account Number</div>
                           <div class="question">Dont have a Carbon account yet?</div>
@@ -76,24 +76,24 @@
                           </div>
                         </div>
                         <div class="step2">
-                          <div class="line"></div>
+                          <div class="line"><img src="https://zero.getcarbon.co/images/line.svg" alt=""></div>
                           <div class="number">2</div>
                           <div class="share">Tell us your preferred item, merchant, and the price.</div>
                         </div>
                         <div class="step2">
-                          <div class="line"></div>
+                          <div class="line"><img src="https://zero.getcarbon.co/images/line.svg" alt=""></div>
                           <div class="number">3</div>
                           <div class="share">Upload your bank statement (for your salary account)</div>
                         </div>
                         <div class="step2">
-                          <div class="line"></div>
+                          <div class="line"><img src="https://zero.getcarbon.co/images/line.svg" alt=""></div>
                           <div class="number">4</div>
                           <div class="share">Give us a few hours to review your application and set you up for your new purchase.</div>
                         </div>
                       </div>
-                      <button class="shop-now get-started">
+                      <div class="get-started">
                        <p>Get started</p> 
-                      </button>
+                      </div>
                     </div>
                </main>
                <section class="trending-stores">
@@ -132,12 +132,12 @@
                           <img class="electromart-img" src="https://zero.getcarbon.co/images/td-tec2x.png" alt="">
                             <div class="merchant-title">TEC</div>
                          <p class="main-img-copy">Home Appliances</p>
+                         <div>
+                           <img class="electromart-img" src="https://zero.getcarbon.co/images/piq-h.png" alt="">
+                          <div class="merchant-title">Piqit by IO</div>
+                          <p class="main-img-copy">Home Appliances</p>
+                       </div>
                       </div>
-                      <div>
-                        <img class="electromart-img" src="https://zero.getcarbon.co/images/piq-h.png" alt="">
-                       <div class="merchant-title">Piqit by IO</div>
-                       <p class="main-img-copy">Home Appliances</p>
-                    </div>
                        </div>
                         </div>
                    </div>
@@ -152,15 +152,13 @@
                       <img class="products"  src="https://zero.getcarbon.co/images/iphone.png" alt="">
                       <img class="products" src="https://zero.getcarbon.co/images/SAMSUNG.png" alt="">
                       <img class="products" src="https://zero.getcarbon.co/images/iwatch.png" alt="">
-                    </div>
-                    <div class="product-inner">
                       <img class="products" src="https://zero.getcarbon.co/images/P4.png" alt="">
                       <img class="products" src="https://zero.getcarbon.co/images/mbp.png" alt="">
                       <img class="products" src="https://zero.getcarbon.co/images/ref.png" alt="">
                     </div>
-                    <button class=" shop-now">
+                    <div class="get-started shop-now">
                       <p>Shop now</p>
-                    </button>
+                    </div>
                   </div>
                 </section >
                 <section class="partners">
@@ -172,6 +170,74 @@
                     <p class="partner-paragraph"> We’re leveraging our relationship with some of the biggest and most trusted merchants to provide items of the highest quality.</p>
                   </div>
                 </section>
+                <section class="how-to">
+                  <div>
+                    
+                  </div>
+                  <div class="how-to-header">How it works</div>
+                  <div class="how-to-guides">
 
+                    <div class="how-to-content">
+                      <div>
+                        <img src="https://zero.getcarbon.co/images/store.svg" alt="">
+                      </div>
+                      <div>
+                        <div class="how-to-sub">Choose your preferred store</div>
+                        <p class="how-to-paragraph">See an item you like? Let us know in the application form.</p>
+                      </div>
+                    </div>
+                    <div class="how-to-content">
+                      <div>
+                        <img src="https://zero.getcarbon.co/images/app-store.svg" alt="">
+                      </div>
+                      <div>
+                        <div class="how-to-sub">Pick any device of your choice</div>
+                        <p class="how-to-paragraph">Select your desired item and provide your personal details.</p>
+                      </div>
+                    </div>
+                    <div class="how-to-content">
+                      <div>
+                        <img src="https://zero.getcarbon.co/images/Group-10624.svg" alt="">
+                      </div>
+                      <div>
+                        <div class="how-to-sub">Get verified</div>
+                        <p class="how-to-paragraph">We’ll review your eligibility and pass you for a Carbon Zero plan once qualified.</p>
+                      </div>
+                    </div>
+                    <div class="how-to-content">
+                      <div>
+                        <img src="https://zero.getcarbon.co/images/wallet-passes-app.svg" alt="">
+                      </div>
+                      <div>
+                        <div class="how-to-sub">Set up a plan</div>
+                        <p class="how-to-paragraph">Choose a repayment plan within 3 - 6 months and make a downpayment of just 25%</p>
+                      </div>
+                  </div>
+                </div>
+                <div class="how-to-btn">
+                  <div>Get started</div>
+                </div>
+                </section>
+                <section  class="build">
+                  <div class="build-financial">
+                    <div>
+                      <div class="build-copy">
+                        <div class="build-header">Buid a healthier financial future</div>
+                        <p class="build-paragraph">Even when you’ve got the funds now, paying for valuable items in installments at zero interest rates can be a better financial decision in the long run.</p>
+                      </div>
+                      <div class="build-btn">
+                        <div>Get started</div>
+                      </div>
+                    </div>
+                      <div class="build-img-holder">
+                        <img class="build-img" src="https://zero.getcarbon.co/images/healthier2x.png" alt="">
+                      </div>
+                    </div>
+                </section>
+                <section>
+                  <div>
+                    <div>Everyone loves to shop with Carbon Zero</div>
+                  </div>
+                </section>
   </body>
 </html>
