--- a/index.html
+++ b/index.html
@@ -466,7 +466,7 @@
     </div>
 
     <div class="faq-section-btn">
-      <button class="get-item-btn">Get an item</button>
+      <div class="get-started">Get an item</div>
     </div>
   </section>
   <footer>
