update faq section style

--- a/index.html
+++ b/index.html
@@ -283,190 +283,209 @@
     <div>
       <h2>Got questions?</h2>
     </div>
-    <div tabindex="1" class="quest-holder">
-      <div class="quests">
-        <div>What is Carbon Zero? </div>
-        <div><i class="ri-arrow-down-s-line"></i></div>
-      </div>
-      <div class="answers">
-        <div>Carbon Zero is a buy-now-pay-later product that lets you purchase gadgets and electronics and pay in small
-          installments at a 0% interest rate.
-          These include phones, TVs, refrigerators, air conditioners, gaming consoles, and a whole lot more.</div>
-      </div>
-    </div>
-    <div tabindex="2" class="quest-holder">
-      <div class="quests">
-        <div>Do I have to pay any interest?</div>
-        <div><i class="ri-arrow-down-s-line"></i></div>
-      </div>
-      <div class="answers">
-        <div>Not at all! That’s what makes Carbon Zero different;
-          you only pay the original price and you also get to spread the payment conveniently.</div>
-      </div>
-    </div>
-    <div tabindex="3" class="quest-holder">
-      <div class="quests">
-        <div>Do I have to pay an initial instalment?</div>
-        <div><i class="ri-arrow-down-s-line"></i></div>
-      </div>
-      <div class="answers">
-        <div>Yes, there is a small part of the total cost to be paid at the point of purchase.
-          The rest is spread over a period of time, usually three months.</div>
-      </div>
-    </div>
-    <div tabindex="4" class="quest-holder">
-      <div class="quests">
-        <div> Are there any hidden fees?</div>
-        <div><i class="ri-arrow-down-s-line"></i></div>
-      </div>
-      <div class="answers">
-        <div>Are there any hidden fees?There are absolutely no hidden charges when you buy any item with Carbon Zero.
-          However, to help smoothen the repayment process,
-          there is a charge on late repayments.</div>
-      </div>
-    </div>
-
-    <div tabindex="5" class="quest-holder">
-      <div class="quests">
-        <div>Can I purchase items from any merchant?
+    <div class="wrapper">
+      <div tabindex="1" class="quest-holder">
+        <div class="quests">
+          <div>What is Carbon Zero? </div>
+          <div><i class="ri-arrow-down-s-line"></i></div>
         </div>
-        <div><i class="ri-arrow-down-s-line"></i></div>
-      </div>
-      <div class="answers">
-        <div>For the best experience, we only partner with authentic merchants. This means you can buy from Carbon
-          Zero-verified merchants.
-          But we’re always adding new merchants to our partner list to give you more options.</div>
-      </div>
-    </div>
-
-    <div tabindex="6" class="quest-holder">
-      <div class="quests">
-        <div>What items are available?
+        <div class="answers">
+          <div>Carbon Zero is a buy-now-pay-later product that lets you purchase gadgets and electronics and pay in
+            small
+            installments at a 0% interest rate.
+            These include phones, TVs, refrigerators, air conditioners, gaming consoles, and a whole lot more.</div>
         </div>
-        <div><i class="ri-arrow-down-s-line"></i></div>
-      </div>
-      <div class="answers">
-        <div>There are various gadgets and electronic items available on Carbon Zero, from smartphones to TVs, home
-          theatre sets,
-          refrigerators, air conditioners, inverters, laptops, and so on.</div>
       </div>
     </div>
-
-    <div tabindex="7" class="quest-holder">
-      <div class="quests">
-        <div>How do I apply?
+    <div class="wrapper">
+      <div tabindex="2" class="quest-holder">
+        <div class="quests">
+          <div>Do I have to pay any interest?</div>
+          <div><i class="ri-arrow-down-s-line"></i></div>
         </div>
-        <div><i class="ri-arrow-down-s-line"></i></div>
-      </div>
-      <div class="answers">
-        <div>You can apply by filling the application form with all the required details.
-          Also feel free to search items from any of our merchant’s websites before completing the form.</div>
-      </div>
-    </div>
-
-    <div tabindex="8" class="quest-holder">
-      <div class="quests">
-        <div>Is Carbon Zero for Carbon Customers only?
+        <div class="answers">
+          <div>Not at all! That’s what makes Carbon Zero different;
+            you only pay the original price and you also get to spread the payment conveniently.</div>
         </div>
-        <div><i class="ri-arrow-down-s-line"></i></div>
-      </div>
-      <div class="answers">
-        <div>No. It is accessible to both new and existing Carbon customers,
-          meaning you can get access to zero financing by simply opening a Carbon account today.</div>
       </div>
     </div>
-
-    <div tabindex="9" class="quest-holder">
-      <div class="quests">
-        <div>Do I need to be a salary earner?
+    <div class="wrapper">
+      <div tabindex="3" class="quest-holder">
+        <div class="quests">
+          <div>Do I have to pay an initial instalment?</div>
+          <div><i class="ri-arrow-down-s-line"></i></div>
         </div>
-        <div><i class="ri-arrow-down-s-line"></i></div>
-      </div>
-      <div class="answers">
-        <div>Carbon Zero is open to salary earners who have a verifiable source of income.</div>
-      </div>
-    </div>
-    <div tabindex="10" class="quest-holder">
-      <div class="quests">
-        <div>What is the minimum salary to be eligible for Carbon Zero?
+        <div class="answers">
+          <div>Yes, there is a small part of the total cost to be paid at the point of purchase.
+            The rest is spread over a period of time, usually three months.</div>
         </div>
-        <div><i class="ri-arrow-down-s-line"></i></div>
       </div>
-      <div class="answers">
-        <div>At the moment, Carbon Zero is only available to customers who earn at least ₦120,000 monthly. </div>
-      </div>
-
     </div>
-
-    <div tabindex="11" class="quest-holder">
-      <div class="quests">
-        <div>Can I apply for Carbon Zero if I have an existing loan with Carbon?
+    <div class="wrapper">
+      <div tabindex="4" class="quest-holder">
+        <div class="quests">
+          <div> Are there any hidden fees?</div>
+          <div><i class="ri-arrow-down-s-line"></i></div>
         </div>
-        <div><i class="ri-arrow-down-s-line"></i></div>
-      </div>
-      <div class="answers">
-        <div>Customers with an active Carbon loan are not eligible to apply for Carbon Zero.
-          But can go ahead as soon as they complete the repayment </div>
-      </div>
-    </div>
-
-    <div tabindex="12" class="quest-holder">
-      <div class="quests">
-        <div>How can I split my payments with Carbon Zero?
+        <div class="answers">
+          <div>Are there any hidden fees?There are absolutely no hidden charges when you buy any item with Carbon Zero.
+            However, to help smoothen the repayment process,
+            there is a charge on late repayments.</div>
         </div>
-        <div><i class="ri-arrow-down-s-line"></i></div>
-      </div>
-      <div class="answers">
-        <div>You can split payments for any product on Carbon Zero over a 3-month period but you can request to extend
-          repayments to 6 months.
-          However, this is subject to terms and conditions.</div>
       </div>
     </div>
-
-    <div tabindex="13" class="quest-holder">
-      <div class="quests">
-        <div>Is Carbon Zero available everywhere in Nigeria?
+    <div class="wrapper">
+      <div tabindex="5" class="quest-holder">
+        <div class="quests">
+          <div>Can I purchase items from any merchant?
+          </div>
+          <div><i class="ri-arrow-down-s-line"></i></div>
         </div>
-        <div><i class="ri-arrow-down-s-line"></i></div>
-      </div>
-      <div class="answers">
-        <div>You can find our partners in Lagos at the moment.
-          But be rest assured, we’re announcing more merchants in other locations across Nigeria soon. </div>
-      </div>
-    </div>
-
-    <div tabindex="14" class="quest-holder">
-      <div class="quests">
-        <div>Can I sign up as a merchant?
+        <div class="answers">
+          <div>For the best experience, we only partner with authentic merchants. This means you can buy from Carbon
+            Zero-verified merchants.
+            But we’re always adding new merchants to our partner list to give you more options.</div>
         </div>
-        <div><i class="ri-arrow-down-s-line"></i></div>
-      </div>
-      <div class="answers">
-        <div>Yes, you can sign up as a merchant. You will go through our vetting process and, once verified,
-          become an authorized Carbon Zero partner.</div>
       </div>
     </div>
-
-    <div tabindex="15" class="quest-holder">
-      <div class="quests">
-        <div>How do I become a merchant?</div>
-        <div><i class="ri-arrow-down-s-line"></i></div>
-      </div>
-      <div class="answers">
-        <div>You can apply to become a Carbon Zero merchant by sending an email to <a
-            href="mailto:carbonzero@getcarbon.co">carbonzero@getcarbon.co</a> with the
-          following information: <br> <br><br>
-
-          -Your business name <br>
-          -The type of products you sell <br>
-          -Your business location (we’re partnering with Lagos-based merchants for now) <br>
-          -Proof that your business is registered in Nigeria</div>
+    <div class="wrapper">
+      <div tabindex="6" class="quest-holder">
+        <div class="quests">
+          <div>What items are available?
+          </div>
+          <div><i class="ri-arrow-down-s-line"></i></div>
+        </div>
+        <div class="answers">
+          <div>There are various gadgets and electronic items available on Carbon Zero, from smartphones to TVs, home
+            theatre sets,
+            refrigerators, air conditioners, inverters, laptops, and so on.</div>
+        </div>
       </div>
     </div>
+    <div class="wrapper">
+      <div tabindex="7" class="quest-holder">
+        <div class="quests">
+          <div>How do I apply?
+          </div>
+          <div><i class="ri-arrow-down-s-line"></i></div>
+        </div>
+        <div class="answers">
+          <div>You can apply by filling the application form with all the required details.
+            Also feel free to search items from any of our merchant’s websites before completing the form.</div>
+        </div>
+      </div>
     </div>
+    <div class="wrapper">
+      <div tabindex="8" class="quest-holder">
+        <div class="quests">
+          <div>Is Carbon Zero for Carbon Customers only?
+          </div>
+          <div><i class="ri-arrow-down-s-line"></i></div>
+        </div>
+        <div class="answers">
+          <div>No. It is accessible to both new and existing Carbon customers,
+            meaning you can get access to zero financing by simply opening a Carbon account today.</div>
+        </div>
+      </div>
+    </div>
+    <div class="wrapper">
+      <div tabindex="9" class="quest-holder">
+        <div class="quests">
+          <div>Do I need to be a salary earner?
+          </div>
+          <div><i class="ri-arrow-down-s-line"></i></div>
+        </div>
+        <div class="answers">
+          <div>Carbon Zero is open to salary earners who have a verifiable source of income.</div>
+        </div>
+      </div>
+    </div>
+    <div class="wrapper">
+      <div tabindex="10" class="quest-holder">
+        <div class="quests">
+          <div>What is the minimum salary to be eligible for Carbon Zero?
+          </div>
+          <div><i class="ri-arrow-down-s-line"></i></div>
+        </div>
+        <div class="answers">
+          <div>At the moment, Carbon Zero is only available to customers who earn at least ₦120,000 monthly. </div>
+        </div>
 
-    <div class="faq-section-btn">
-      <div class="get-started">Get an item</div>
+      </div>
+    </div>
+    <div class="wrapper">
+      <div tabindex="11" class="quest-holder">
+        <div class="quests">
+          <div>Can I apply for Carbon Zero if I have an existing loan with Carbon?
+          </div>
+          <div><i class="ri-arrow-down-s-line"></i></div>
+        </div>
+        <div class="answers">
+          <div>Customers with an active Carbon loan are not eligible to apply for Carbon Zero.
+            But can go ahead as soon as they complete the repayment </div>
+        </div>
+      </div>
+    </div>
+    <div class="wrapper">
+      <div tabindex="12" class="quest-holder">
+        <div class="quests">
+          <div>How can I split my payments with Carbon Zero?
+          </div>
+          <div><i class="ri-arrow-down-s-line"></i></div>
+        </div>
+        <div class="answers">
+          <div>You can split payments for any product on Carbon Zero over a 3-month period but you can request to extend
+            repayments to 6 months.
+            However, this is subject to terms and conditions.</div>
+        </div>
+      </div>
+    </div>
+    <div class="wrapper">
+      <div tabindex="13" class="quest-holder">
+        <div class="quests">
+          <div>Is Carbon Zero available everywhere in Nigeria?
+          </div>
+          <div><i class="ri-arrow-down-s-line"></i></div>
+        </div>
+        <div class="answers">
+          <div>You can find our partners in Lagos at the moment.
+            But be rest assured, we’re announcing more merchants in other locations across Nigeria soon. </div>
+        </div>
+      </div>
+    </div>
+    <div class="wrapper">
+      <div tabindex="14" class="quest-holder">
+        <div class="quests">
+          <div>Can I sign up as a merchant?
+          </div>
+          <div><i class="ri-arrow-down-s-line"></i></div>
+        </div>
+        <div class="answers">
+          <div>Yes, you can sign up as a merchant. You will go through our vetting process and, once verified,
+            become an authorized Carbon Zero partner.</div>
+        </div>
+      </div>
+    </div>
+    <div class="wrapper">
+      <div tabindex="15" class="quest-holder">
+        <div class="quests">
+          <div>How do I become a merchant?</div>
+          <div><i class="ri-arrow-down-s-line"></i></div>
+        </div>
+        <div class="answers">
+          <div>You can apply to become a Carbon Zero merchant by sending an email to <a
+              href="mailto:carbonzero@getcarbon.co">carbonzero@getcarbon.co</a> with the
+            following information: <br> <br><br>
+
+            -Your business name <br>
+            -The type of products you sell <br>
+            -Your business location (we’re partnering with Lagos-based merchants for now) <br>
+            -Proof that your business is registered in Nigeria</div>
+        </div>
+      </div>
+    </div>
+    <div>
+      <div class=" faq-section-btn">Get an item</div>
     </div>
   </section>
   <footer>
