Feature: handle media query

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
   <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
   <link rel="stylesheet prefetch"
     href="https://cdn.rawgit.com/mfd/e7842774e037edf15919037594a79b2b/raw/665bdfc532094318449f1010323c84013d5af953/graphik.css">
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
   <link rel="stylesheet" href="style.css" />
 </head>
 
@@ -65,8 +69,8 @@
   </section>
   <main>
     <div class="favorite-item">
-      <h2 class="interest-rate-header">
-        <strong class="own">Owning your favourite item is <span>straightforward</span> </strong>
+      <h2 class="own">
+        <strong>Owning your favourite item is <span>straightforward</span> </strong>
       </h2>
       <div class="favorite-item-text">
         <div class="step1">
@@ -232,7 +236,7 @@
     <div class="build-financial">
       <div>
         <div class="build-copy">
-          <div class="build-header">Buid a healthier financial future</div>
+          <div class="build-header">Build a healthier financial future</div>
           <p class="build-paragraph">Even when you’ve got the funds now, paying for valuable items in installments at
             zero interest rates can be a better financial decision in the long run.</p>
         </div>
@@ -279,7 +283,7 @@
       <button class="refer-btn">Refer a merchant now</button>
     </div>
   </section>
-  <section class="faq-section">
+  <section class="faq-section ">
     <div>
       <h2>Got questions?</h2>
     </div>
