--- a/index.html
+++ b/index.html
@@ -7,12 +7,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Carbon Zero Clone</title>
   <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
-  <link rel="stylesheet prefetch"
-    href="https://cdn.rawgit.com/mfd/e7842774e037edf15919037594a79b2b/raw/665bdfc532094318449f1010323c84013d5af953/graphik.css">
-    <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
-  />
   <link rel="stylesheet" href="style.css" />
 </head>
 
@@ -33,6 +27,8 @@
       </div>
     </nav>
     <section class="hero-section">
+      <div class="homepage-text">
+
       <div>
         <h1 class="home-header">
           <strong">Pay with Zero: Buy now, Pay later at 0% interest.</strong>
@@ -46,6 +42,8 @@
         <p class="sub-links1">View stores</p>
         <p class="sub-links2 ">Request now</p>
       </div>
+    </div>
+
     </section>
 
   </div>
@@ -96,7 +94,7 @@
           <div class="share">Upload your bank statement (for your salary account)</div>
         </div>
         <div class="step2">
-          <div class="line"><img src="https://zero.getcarbon.co/images/line.svg" alt=""></div>
+            <div class="line"><img src="https://zero.getcarbon.co/images/line.svg" alt=""></div>
           <div class="number">4</div>
           <div class="share">Give us a few hours to review your application and set you up for your new purchase.</div>
         </div>
